# gurudev-lang

./: .gitignore  CLA.md  LICENSE-CC-BY-SA.md  LICENSE.md  NOTICE.md  PATENTS.md  README.md  RELATORIO_ANALISE_BETA.md  ROADMAP_BETA_COMPLETO.md  SETUP.md  gurudev-cli.py  pyproject.toml  requirements.txt
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  research_proposal.md
.github/workflows/: tests.yml
compiler/: context_analyzer.py  lexer.py
docs/: ROADMAP.md  especificacao-fundacional-v0.2.md
docs/arquitetura/: DECISIONS.md
docs/especificacao/: GURUBYTE_SPEC.md  GURUCOMPILER_SPEC.md  GURUDEV_SPEC_v0.1.md  GURUINSTRUCTIONSET_v0.1.md  GURUMATRIX_SPEC.md
docs/whitepaper/: IPII_Transpilacao_Semantica.md
examples/: fatorial.guru  hello_science.guru  multimodal_art.guru  mvp_demo.guru
gurudev/: cli.py  logger.py
gurudev_lang.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
gurumatrix/: core.py  data_v0.2.json  embeddings_v0.2.json  expansion_tool.py
runtime/: __init__.py  gurudvm.py
scripts/: build_release.sh  generate_embeddings.py  populate_priority_domains.py  setup_dev.sh
src/cli/: __init__.py  gurudev_cli.py
src/compiler/: __init__.py  bytecode_gen.py  context_analyzer.py  lexer.py  parser.py
src/gurudev/: cli.py  exceptions.py  logger.py  pipeline.py
src/gurudev/ipii/: __init__.py  bytecode_adapter_real.py  engine.py  intent_analyzer.py  transpiler.py
src/gurumatrix/: __init__.py  cells.py  core.py  data_v0.2.json  embeddings_v0.2.json
src/runtime/: dispatch.py  gurudvm.py  instructions.py
tests/: __init__.py  test_density.py  test_dvm.py  test_gurumatrix.py  test_ipii.py  test_lexer.py  test_mvp.py  test_parser.py  test_refinements.py  test_turing_completeness.py
