[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gurudev-lang"
version = "0.1.0"
description = "Linguagem de programação semântica com dispatch hermenêutico"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Guilherme Gonçalves Machado", email = "guilherme@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Compilers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["language", "compiler", "semantic", "hermeneutics"]
requires-python = ">=3.9"
dependencies = [
    "pytest>=7.0",
    "click>=8.0",
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
    "black>=23.0",
    "isort>=5.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
]

[project.scripts]
gurudev = "gurudev.cli:main"

[project.urls]
Homepage = "https://github.com/marcabru-tech/gurudev-lang"
Documentation = "https://github.com/marcabru-tech/gurudev-lang/docs"
Repository = "https://github.com/marcabru-tech/gurudev-lang"
Issues = "https://github.com/marcabru-tech/gurudev-lang/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["compiler*", "runtime*", "gurumatrix*", "gurudev*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
