[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gurudev-lang"
version = "0.2.0"
description = "Linguagem de programação semântica com dispatch hermenêutico"
readme = "README.md"
license = {text = "Hubstry-GuruDev License v1.0"}
authors = [
    {name = "Guilherme Gonçalves Machado", email = "guilherme@hubstry.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Compilers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["language", "compiler", "semantic", "hermeneutics", "gurudev"]
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
]

[project.scripts]
gurudev = "gurudev.cli:main"

[project.urls]
Homepage = "https://github.com/marcabru-tech/gurudev-lang"
Documentation = "https://github.com/marcabru-tech/gurudev-lang/docs"
Repository = "https://github.com/marcabru-tech/gurudev-lang"
Issues = "https://github.com/marcabru-tech/gurudev-lang/issues"

[tool.hatch.build.targets.wheel]
packages = [
    "src/gurumatrix",
    "src/compiler",
    "src/runtime",
    "src/gurudev",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tests/",
    "examples/",
    "docs/",
    "README.md",
    "LICENSE.md",
    "pyproject.toml",
]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "E701", "E702"]

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
# Suavizado para o MVP — reativar conforme o código for tipado
# TODO(P2): reativar disallow_untyped_defs ao tipar o código completo
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = ["runtime.gurudvm", "compiler.bytecode_gen"]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
pythonpath = ["src"]
